<resources>
    <string name="app_name">SpeakiT French</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="textView">Greetings</string>
    <string name="textView2">Fruits</string>
    <string name="textView3">Colors</string>
    <string name="textView4">Family</string>
    <string name="textView5">Sports</string>
    <string name="textView6">Health</string>
    <string name="textView7">Food</string>
    <string name="textView8">Numbers</string>
    <string name="textView9">Directions</string>
    <string name="textView10">Domestic animals</string>
    <string name="textView11">Wild animals</string>
    <string name="textView12">Time Expressions</string>
    <string name="textView13">Festivals</string>
    <string name="textView14">Restaurant</string>
    <string name="textView15">Days/Month</string>
    <string name="textView16">English</string>
    <string name="textView17">French</string>
    <string name="textView18">How’s it going?</string>
    <string name="textView19">Comment ça va?</string>
    <string name="textView20">How are you\n doing?</string>
    <string name="textView21">Comment vas-tu ?</string>
    <string name="textView22">How’s your\n day?</string>
    <string name="textView23">Comment est ta\n journée?</string>
    <string name="textView24">Good to see\n you</string>
    <string name="textView25">Content de te\n voir</string>
    <string name="textView26">It’s been\n a while</string>
    <string name="textView27">Cela fait\n longtemps</string>
    <string name="textView28">Are you\n OK?</string>
    <string name="textView29">Êtes-vous\n OK?</string>
    <string name="textView30">English</string>
    <string name="textView31">French</string>
    <string name="textView32">Apple</string>
    <string name="textView33">Pomme</string>
    <string name="textView34">Banana</string>
    <string name="textView35">Banane</string>
    <string name="textView36">Guava</string>
    <string name="textView37">Pronounce</string>
    <string name="textView38">Hello</string>
    <string name="textView39">Bonjour</string>
    <string name="textView40">Hi</string>
    <string name="textView41">Salut</string>
    <string name="textView42">hey</string>
    <string name="textView43">Coucou</string>
    <string name="textView44">Good Morning</string>
    <string name="textView45">Bon matin</string>
    <string name="textView46">Good night</string>
    <string name="textView47">Bonsoir</string>
    <string name="textView48">Hello again</string>
    <string name="textView49">Rebonjour</string>
    <string name="textView50">Goyave</string>
    <string name="textView51">Pear</string>
    <string name="textView52">Poire</string>
    <string name="textView53">Pomegranate</string>
    <string name="textView54">Grenade</string>
    <string name="textView55">Watermelon</string>
    <string name="textView56">Pastèque</string>
    <string name="textView57">Grapes</string>
    <string name="textView58">Les Raisins</string>
    <string name="textView59">Blackberry</string>
    <string name="textView60">La Mûre</string>
    <string name="textView61">Plum</string>
    <string name="textView62">Prune</string>
    <string name="textView63">raisins</string>
    <string name="textView64">Les raisins secs </string>
    <string name="textView65">Pronounce</string>
    <string name="textView66">apricot</string>
    <string name="textView67">Un abricot</string>
    <string name="textView68">English</string>
    <string name="textView69">French</string>
    <string name="textView70">Red</string>
    <string name="textView71">Rouge</string>
    <string name="textView72">Yellow</string>
    <string name="textView73">Jaune</string>
    <string name="textView74">Blue </string>
    <string name="textView75">	bleu / bleue</string>
    <string name="textView76">Green</string>
    <string name="textView77">vert / verte</string>
    <string name="textView78">Purple</string>
    <string name="textView79">violette</string>
    <string name="textView80">White</string>
    <string name="textView81">blanche</string>
    <string name="textView82">Brown</string>
    <string name="textView83">brun /brune \n /marron</string>
    <string name="textView84">Black</string>
    <string name="textView85">noir / noire</string>
    <string name="textView86">Pink</string>
    <string name="textView87">rose</string>
    <string name="textView88">Gray</string>
    <string name="textView89">grise</string>
    <string name="textView90">pronounce</string>
    <string name="textView91">Silver</string>
    <string name="textView92">argenté / argentée</string>
    <string name="textView93">English</string>
    <string name="textView94">French</string>
    <string name="textView95">my family</string>
    <string name="textView96">ma famille</string>
    <string name="textView97">younger</string>
    <string name="textView98">cadet/cadette</string>
    <string name="textView99">elder</string>
    <string name="textView100">aîné</string>
    <string name="textView101">step-father</string>
    <string name="textView102">le beau-père</string>
    <string name="textView103">step-mother</string>
    <string name="textView104">la belle-mère </string>
    <string name="textView105">friend,</string>
    <string name="textView106">le copain /la copine </string>
    <string name="textView107"> half-brother</string>
    <string name="textView108">le demi-frère </string>
    <string name="textView109">half-sister</string>
    <string name="textView110">la demi-sœur </string>
    <string name="textView111">wife/woman</string>
    <string name="textView112">la femme</string>
    <string name="textView113">daughter/girl</string>
    <string name="textView114">la fille </string>
    <string name="textView115">Pronounce</string>
    <string name="textView116">son</string>
    <string name="textView117">le fils </string>
    <string name="textView118">English</string>
    <string name="textView119">French</string>
    <string name="textView120">Football</string>
    <string name="textView121">Le foot</string>
    <string name="textView122">basketball</string>
    <string name="textView123">le basket</string>
    <string name="textView124">Tennis</string>
    <string name="textView125">Le tennis </string>
    <string name="textView126">Table tennis</string>
    <string name="textView127">Le ping-pong </string>
    <string name="textView128">Volleyball</string>
    <string name="textView129">Le volley </string>
    <string name="textView130">Rugby</string>
    <string name="textView131">Le rugby </string>
    <string name="textView132">Cycling</string>
    <string name="textView133">Le cyclisme </string>
    <string name="textView134">Golf</string>
    <string name="textView135">Le golf </string>
    <string name="textView136">Hockey</string>
    <string name="textView137">Le hockey </string>
    <string name="textView138">Badminton</string>
    <string name="textView139">Le badminton </string>
    <string name="textView140">pronounce</string>
    <string name="textView141"> Ice hockey</string>
    <string name="textView142">Le hockey sur glace</string>
    <string name="textView143">English</string>
    <string name="textView144">French</string>
    <string name="textView145">Long</string>
    <string name="textView146">long/longue</string>
    <string name="textView147">glasses</string>
    <string name="textView148">les lunettes (f)</string>
    <string name="textView149">medium length</string>
    <string name="textView150">mi-long</string>
    <string name="textView151">straight</string>
    <string name="textView152">raide</string>
    <string name="textView153">medium height</string>
    <string name="textView154">de taille moyenne</string>
    <string name="textView155">eyes</string>
    <string name="textView156">les yeux (m)</string>
    <string name="textView157">old</string>
    <string name="textView158">vieux /vieille</string>
    <string name="textView159">Rebonjour</string>
    <string name="textView160">Rebonjour</string>
    <string name="textView161">Rebonjour</string>
    <string name="textView162">English</string>
    <string name="textView163">French</string>
    <string name="textView164">Rebonjour</string>
    <string name="textView165">pronounce</string>
    <string name="textView166">Rebonjour</string>
    <string name="textView167">Rebonjour</string>
    <string name="textView168">English</string>
    <string name="textView169">French</string>
    <string name="textView170">meat</string>
    <string name="textView171">la viande</string>
    <string name="textView172">chicken</string>
    <string name="textView173">le poulet</string>
    <string name="textView174">sausage</string>
    <string name="textView175">la saucisse</string>
    <string name="textView176">burger</string>
    <string name="textView177">le steak haché</string>
    <string name="textView178">beef</string>
    <string name="textView179">le bœuf</string>
    <string name="textView180">duck</string>
    <string name="textView181">le canard</string>
    <string name="textView182">lamb</string>
    <string name="textView183">l\' agneau (m)</string>
    <string name="textView184">veal</string>
    <string name="textView185">le veau</string>
    <string name="textView186">snail</string>
    <string name="textView187">English</string>
    <string name="textView188">salmon</string>
    <string name="textView189">le saumon</string>
    <string name="textView190">Pronounce</string>
    <string name="textView191">tuna</string>
    <string name="textView192">le thon</string>
    <string name="textView193">English</string>
    <string name="textView194">French</string>
    <string name="textView195">one</string>
    <string name="textView196">un</string>
    <string name="textView197">two</string>
    <string name="textView198">deux</string>
    <string name="textView199">three</string>
    <string name="textView200">trois</string>
    <string name="textView201">four</string>
    <string name="textView202">quatre</string>
    <string name="textView203">five</string>
    <string name="textView204">cinq</string>
    <string name="textView205">six</string>
    <string name="textView206">six</string>
    <string name="textView207">seven</string>
    <string name="textView208">sept</string>
    <string name="textView209">eight</string>
    <string name="textView210">huit</string>
    <string name="textView211">nine</string>
    <string name="textView212">neuf</string>
    <string name="textView213">ten</string>
    <string name="textView214">dix</string>
    <string name="textView215">Pronounce</string>
    <string name="textView216">eleven</string>
    <string name="textView217">onze</string>
    <string name="textView218">English</string>
    <string name="textView219">French</string>
    <string name="textView220">on/to the right</string>
    <string name="textView221">à droite</string>
    <string name="textView222">on/to the left</string>
    <string name="textView223">à gauche</string>
    <string name="textView224">straight ahead</string>
    <string name="textView225">tout droit</string>
    <string name="textView226">here</string>
    <string name="textView227">ici</string>
    <string name="textView228">there</string>
    <string name="textView229">là (bas)</string>
    <string name="textView230">down(stairs)</string>
    <string name="textView231">en bas</string>
    <string name="textView232">up(stairs)</string>
    <string name="Button47">LISTEN</string>
    <string name="Button48">LISTEN</string>
    <string name="Button49">LISTEN</string>
    <string name="Button50">LISTEN</string>
    <string name="Button51">LISTEN</string>
    <string name="Button52">LISTEN</string>
    <string name="Button53">LISTEN</string>
    <string name="Button54">LISTEN</string>
    <string name="Button55">LISTEN</string>
    <string name="Button56">LISTEN</string>
    <string name="Button57">LISTEN</string>
</resources>