<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SportsActivity">

    <TextView
        android:id="@+id/textView118"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView118"
        android:textAllCaps="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView119"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView119"
        android:textAllCaps="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="81dp"
        android:text="@string/textView120"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/textView121"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView119"
        app:layout_constraintTop_toBottomOf="@+id/textView119" />

    <TextView
        android:id="@+id/textView122"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:text="@string/textView122"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView120" />

    <TextView
        android:id="@+id/textView123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/textView123"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView121"
        app:layout_constraintTop_toBottomOf="@+id/textView121" />

    <TextView
        android:id="@+id/textView124"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:text="@string/textView124"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView122" />

    <TextView
        android:id="@+id/textView125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/textView125"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView123"
        app:layout_constraintTop_toBottomOf="@+id/textView123" />

    <TextView
        android:id="@+id/textView126"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:text="@string/textView126"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView124" />

    <TextView
        android:id="@+id/textView127"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/textView127"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView125"
        app:layout_constraintTop_toBottomOf="@+id/textView125" />

    <TextView
        android:id="@+id/textView128"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:text="@string/textView128"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView126" />

    <TextView
        android:id="@+id/textView129"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/textView129"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView127"
        app:layout_constraintTop_toBottomOf="@+id/textView127" />

    <TextView
        android:id="@+id/textView130"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:text="@string/textView130"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView128" />

    <TextView
        android:id="@+id/textView131"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/textView131"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView129"
        app:layout_constraintTop_toBottomOf="@+id/textView129" />

    <TextView
        android:id="@+id/textView132"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:text="@string/textView132"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView130" />

    <TextView
        android:id="@+id/textView133"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/textView133"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView131"
        app:layout_constraintTop_toBottomOf="@+id/textView131" />

    <TextView
        android:id="@+id/textView134"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:text="@string/textView134"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView132" />

    <TextView
        android:id="@+id/textView135"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/textView135"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView133"
        app:layout_constraintTop_toBottomOf="@+id/textView133" />

    <TextView
        android:id="@+id/textView136"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:text="@string/textView136"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView134" />

    <TextView
        android:id="@+id/textView137"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/textView137"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView135"
        app:layout_constraintTop_toBottomOf="@+id/textView135" />

    <TextView
        android:id="@+id/textView138"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:text="@string/textView138"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView136" />

    <TextView
        android:id="@+id/textView139"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/textView139"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView137"
        app:layout_constraintTop_toBottomOf="@+id/textView137" />

    <ImageButton
        android:id="@+id/button47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="23dp"
        android:contentDescription="@string/Button47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/Button48"
        app:layout_constraintStart_toStartOf="@+id/button47"
        app:layout_constraintTop_toBottomOf="@+id/button47"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/Button49"
        app:layout_constraintStart_toStartOf="@+id/button48"
        app:layout_constraintTop_toBottomOf="@+id/button48"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/Button50"
        app:layout_constraintStart_toStartOf="@+id/button49"
        app:layout_constraintTop_toBottomOf="@+id/button49"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/Button51"
        app:layout_constraintStart_toStartOf="@+id/button50"
        app:layout_constraintTop_toBottomOf="@+id/button50"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/Button52"
        app:layout_constraintStart_toStartOf="@+id/button51"
        app:layout_constraintTop_toBottomOf="@+id/button51"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Button53"
        app:layout_constraintStart_toStartOf="@+id/button52"
        app:layout_constraintTop_toBottomOf="@+id/button52"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/Button54"
        app:layout_constraintStart_toStartOf="@+id/button53"
        app:layout_constraintTop_toBottomOf="@+id/button53"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/Button55"
        app:layout_constraintStart_toStartOf="@+id/button54"
        app:layout_constraintTop_toBottomOf="@+id/button54"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Button56"
        app:layout_constraintStart_toStartOf="@+id/button55"
        app:layout_constraintTop_toBottomOf="@+id/button55"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <ImageButton
        android:id="@+id/button57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/Button57"
        app:layout_constraintStart_toStartOf="@+id/button56"
        app:layout_constraintTop_toBottomOf="@+id/button56"
        app:srcCompat="@drawable/ic_baseline_volume_up_24" />

    <TextView
        android:id="@+id/textView140"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textView140"
        android:textAllCaps="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView141"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:text="@string/textView141"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView138" />

    <TextView
        android:id="@+id/textView142"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/textView142"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView139"
        app:layout_constraintTop_toBottomOf="@+id/textView139" />


</androidx.constraintlayout.widget.ConstraintLayout>